@@ -6,16 +6,12 @@ package io.sentry.connection;
 public class TooManyRequestsException extends ConnectionException {
 
     //CHECKSTYLE.OFF: JavadocMethod
-    public TooManyRequestsException(String message) {
-        super(message);
-    }
-
-    public TooManyRequestsException(String message, Throwable cause) {
-        super(message, cause);
-    }
-
-    public TooManyRequestsException(String message, Throwable cause, Long recommendedLockdownTime) {
-        super(message, cause, recommendedLockdownTime);
+    public TooManyRequestsException(
+            String message,
+            Throwable cause,
+            Long recommendedLockdownTime,
+            Integer responseCode) {
+        super(message, cause, recommendedLockdownTime, responseCode);
     }
     //CHECKSTYLE.ON: JavadocMethod
 
